charon/tests/ui/generic-associated-types.out
error: Could not find region: Region { kind: ReEarlyParam(EarlyParamRegion { index: 2, name: "'b" }) }
       
       Region vars map:
       {Region { kind: ReEarlyParam(EarlyParamRegion { index: 0, name: "'a" }) }: 0}
       
       Bound region vars:
       []
  --> tests/ui/generic-associated-types.rs:11:5
   |
11 |     type Item<'b> = &'b T;
   |     ^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::{impl#0}
  --> tests/ui/generic-associated-types.rs:10:1
   |
10 | impl<'a, T> LendingIterator for Option<&'a T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at compiler/rustc_trait_selection/src/traits/normalize.rs:151:9:
Normalizing <<Self as LendingIterator>::Item<'a> as std::marker::Sized> without wrapping in a `Binder`
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::LendingIterator::next`.
 --> tests/ui/generic-associated-types.rs:7:5
  |
7 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::LendingIterator::next
 --> tests/ui/generic-associated-types.rs:7:5
  |
7 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_types.rs:78:26:
Error: missing binder when translating lifetime
error: Thread panicked when extracting item `test_crate::{impl#0}::next`.
  --> tests/ui/generic-associated-types.rs:13:5
   |
13 |     fn next<'b>(&'b mut self) -> Option<Self::Item<'b>> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::{impl#0}::next
  --> tests/ui/generic-associated-types.rs:13:5
   |
13 |     fn next<'b>(&'b mut self) -> Option<Self::Item<'b>> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at /rustc/730d5d4095a264ef5f7c0a0781eea68c15431d45/compiler/rustc_type_ir/src/binder.rs:783:9:
const parameter `'a/#1` ('a/#1/1) out of range when instantiating args=[I/#0]
error: Thread panicked when extracting item `test_crate::for_each`.
  --> tests/ui/generic-associated-types.rs:24:1
   |
24 | fn for_each<I: LendingIterator>(mut iter: I, f: impl for<'a> FnMut(I::Item<'a>)) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::for_each
  --> tests/ui/generic-associated-types.rs:24:1
   |
24 | fn for_each<I: LendingIterator>(mut iter: I, f: impl for<'a> FnMut(I::Item<'a>)) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `x`
  --> tests/ui/generic-associated-types.rs:31:9
   |
31 |     let x = 42;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` on by default

error: aborting due to 8 previous errors; 1 warning emitted

Error: Charon driver exited with code 101
